--- a/index.html
+++ b/index.html
@@ -9,26 +9,15 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<!-- Favicons -->
-		<link rel="shortcut icon" href="assets/img/favicon.ico">
-		<link rel="apple-touch-icon" sizes="57x57" href="./assets/img/favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="./assets/img/favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="./assets/img/favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="./assets/img/favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="./assets/img/favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="./assets/img/favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="./assets/img/favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-icon-192x192.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
-		<link rel="manifest" href="/manifest.json">
+		<link rel="manifest" href="./assets/img/favicon/site.webmanifest">
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750344898112"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750344898112">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750424565893"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750424565893">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -271,7 +260,7 @@
 								<div class="block-head__picture block-head__picture_left">
 									<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
 								</div>
-								<h1 class="block-head__title">Чего Вы хотите от праздника на самом деле?</h1>
+								<h2 class="block-head__title">Чего Вы хотите от праздника на самом деле?</h2>
 								<div class="block-head__description substrate substrate_orange substrate_left">Оживим вашу мечту, просто выберите:</div>
 							</div>
 							<div class="block-body">
@@ -349,6 +338,22 @@
 						</div>
 					</div>
 				</section>
+				<section class="block" id="trust">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<div class="block-head__picture block-head__picture_left">
+									<svg>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-arrowSimple"></use>
+									</svg>
+								</div>
+								<h2 class="block-head__title">Почему нам доверяют организацию праздников под ключ в Москве</h2>
+								<div class="block-head__description substrate substrate_blue substrate_left">Потому что мы знаем, зачем по-настоящему вам нужен праздник</div>
+							</div>
+							<div class="block-body"></div>
+						</div>
+					</div>
+				</section>
 				<section class="block" id="organization">
 					<div class="block__img">
 						<img src="./assets/img/svg/line.svg" alt="image">
@@ -359,7 +364,7 @@
 								<div class="block-head__picture block-head__picture_right">
 									<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
 								</div>
-								<h1 class="block-head__title">Какие праздники мы организуем: детские, взрослые, корпоративные</h1>
+								<h2 class="block-head__title">Какие праздники мы организуем: детские, взрослые, корпоративные</h2>
 								<div class="block-head__description substrate substrate_green substrate_">
 									Мамы плачут на наших праздниках от счастья, бухгалтеры – танцуют, а скука получает бан
 								</div>
@@ -448,7 +453,7 @@
 										<use xlink:href="./assets/img/spritemap.svg#sprite-arrow1"></use>
 									</svg>
 								</div>
-								<h1 class="block-head__title">Что входит в организацию праздника под ключ</h1>
+								<h2 class="block-head__title">Что входит в организацию праздника под ключ</h2>
 								<div class="block-head__description substrate substrate_purple substrate_right">Переписка, которая показывает, как это на самом деле просто</div>
 							</div>
 							<div class="block-body">
@@ -522,6 +527,177 @@
 						</div>
 					</div>
 				</section>
+				<section class="block" id="places">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<div class="block-head__picture block-head__picture_left">
+									<svg>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-arrowSimple"></use>
+									</svg>
+								</div>
+								<h2 class="block-head__title">Какое место станет декорацией вашей истории?</h2>
+								<div class="block-head__description substrate substrate_blue substrate_left">
+									Локация — это как декорации к фильму. Мы подстроим под сюжет, который будет именно у вас. Если хотите камерно — лофт. Если шумно — open air. Если сказочно — наш зал
+								</div>
+							</div>
+							<div class="block-body">
+								<div class="places" data-fls-places="">
+									<div class="places-block purple">
+										<div class="places-block__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/places/block1-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/places/block1-1200.webp" type="image/webp">
+												<img alt="Image" src="./assets/img/places/block1.webp">
+											</picture>
+										</div>
+										<div class="places-block__content">
+											<h3 class="places-block__title">Наша тематическая площадка</h3>
+											<div class="places-block__bars">
+												<div class="bar-item substrate substrate_purple">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/mask.webp">
+													</picture>
+													<span>Тематические залы</span>
+												</div>
+												<div class="bar-item substrate substrate_purple">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/voice.webp">
+													</picture>
+													<span>Профессиональный звук и свет</span>
+												</div>
+												<div class="bar-item substrate substrate_purple">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/castle.webp">
+													</picture>
+													<span>Масштабный реквизит</span>
+												</div>
+												<div class="bar-item substrate substrate_purple">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/magic.webp">
+													</picture>
+													<span>Тематический банкетный зал</span>
+												</div>
+											</div>
+											<button class="button button_purple" data-fls-custombutton="">
+												<span></span>
+												Выбрать повод для праздника
+											</button>
+										</div>
+										<div class="places-block__slider">
+											<div data-fls-slider="" class="places-slider swiper" id="slider-places-theme">
+												<div class="places-slider__wrapper swiper-wrapper">
+													<div class="places-slider__slide swiper-slide" data-fls-gallery="">
+														<a href="./assets/img/places/slider1/image1.webp" class="gallery__image">
+															<picture>
+																<img alt="img" class="gallery__preview" src="./assets/img/places/slider1/image1.webp">
+															</picture>
+														</a>
+													</div>
+													<div class="places-slider__slide swiper-slide" data-fls-gallery="">
+														<a href="./assets/img/places/slider1/image2.webp" class="gallery__image">
+															<picture>
+																<img alt="img" class="gallery__preview" src="./assets/img/places/slider1/image2.webp">
+															</picture>
+														</a>
+													</div>
+													<div class="places-slider__slide swiper-slide" data-fls-gallery="">
+														<a href="./assets/img/places/slider1/image3.webp" class="gallery__image">
+															<picture>
+																<img alt="img" class="gallery__preview" src="./assets/img/places/slider1/image3.webp">
+															</picture>
+														</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="places-block places-block_left orange">
+										<div class="places-block__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/places/block2-600.webp" type="image/webp">
+												<img alt="Image" src="./assets/img/places/block2.webp">
+											</picture>
+										</div>
+										<div class="places-block__content">
+											<h3 class="places-block__title">Любая ваша площадка</h3>
+											<div class="places-block__bars">
+												<div class="bar-item substrate substrate_orange">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/picture.webp">
+													</picture>
+													<span>Тематические залы</span>
+												</div>
+												<div class="bar-item substrate substrate_orange">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/pair.webp">
+													</picture>
+													<span>Профессиональный звук и свет</span>
+												</div>
+												<div class="bar-item substrate substrate_orange">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/shield.webp">
+													</picture>
+													<span>Масштабный реквизит</span>
+												</div>
+												<div class="bar-item substrate substrate_orange">
+													<picture>
+														<img alt="Image" src="./assets/img/smiles/micro.webp">
+													</picture>
+													<span>Тематический банкетный зал</span>
+												</div>
+											</div>
+											<button class="button button_orange" data-fls-custombutton="">
+												<span></span>
+												Выбрать повод для праздника
+											</button>
+										</div>
+										<div class="places-block__slider">
+											<div data-fls-slider="" class="places-slider swiper" id="slider-places-any">
+												<div class="places-slider__wrapper swiper-wrapper">
+													<div class="places-slider__slide swiper-slide" data-fls-gallery="">
+														<a href="./assets/img/places/slider2/image1.webp" class="gallery__image">
+															<picture>
+																<img alt="img" class="gallery__preview" src="./assets/img/places/slider2/image1.webp">
+															</picture>
+														</a>
+													</div>
+													<div class="places-slider__slide swiper-slide" data-fls-gallery="">
+														<a href="./assets/img/places/slider2/image2.webp" class="gallery__image">
+															<picture>
+																<img alt="img" class="gallery__preview" src="./assets/img/places/slider2/image2.webp">
+															</picture>
+														</a>
+													</div>
+													<div class="places-slider__slide swiper-slide" data-fls-gallery="">
+														<a href="./assets/img/places/slider2/image3.webp" class="gallery__image">
+															<picture>
+																<img alt="img" class="gallery__preview" src="./assets/img/places/slider2/image3.webp">
+															</picture>
+														</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block" id="example">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<h2 class="block-head__title">Примеры наших мероприятий</h2>
+								<div class="block-head__description substrate substrate_green substrate_right">
+									Живые фото, видео и эмоции наших героев, в которых легко представить свой праздник
+								</div>
+							</div>
+							<div class="block-body"></div>
+						</div>
+					</div>
+				</section>
 				<section class="block" id="scenario">
 					<div class="block__img">
 						<img src="./assets/img/svg/lineBlue.svg" alt="image">
@@ -529,7 +705,7 @@
 					<div class="block__container">
 						<div class="block__content">
 							<div class="block-head" data-fls-blocktitle="">
-								<h1 class="block-head__title">Сценарии, рождающие эмоции. Выберите свой!</h1>
+								<h2 class="block-head__title">Сценарии, рождающие эмоции. Выберите свой!</h2>
 								<div class="block-head__description substrate substrate_orange substrate_left">
 									Дети становятся искателями приключений, друзья — героями фильма, а коллеги — легендами офиса
 								</div>
@@ -665,7 +841,7 @@
 					<div class="block__container">
 						<div class="block__content">
 							<div class="block-head" data-fls-blocktitle="">
-								<h1 class="block-head__title">Поможем вам понять, какой праздник вам подойдет за 1 минуту</h1>
+								<h2 class="block-head__title">Поможем вам понять, какой праздник вам подойдет за 1 минуту</h2>
 								<div class="block-head__description substrate substrate_green substrate_right">
 									Мы хотим, чтобы вы сказали: – Да, я представляю праздник своей мечты именно так. Для этого просто ответьте на 4 вопроса
 								</div>
@@ -680,13 +856,29 @@
 						</div>
 					</div>
 				</section>
+				<section class="block" id="command">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<div class="block-head__picture block-head__picture_right">
+									<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
+								</div>
+								<h2 class="block-head__title">Команда, которая сделает все красиво</h2>
+								<div class="block-head__description substrate substrate_blue substrate_left">
+									Мы не просто делаем праздники. Мы делаем то самое чувство, когда «всё пошло по плану, но неожиданно круче». У вас один праздник — у нас сотни, но каждый — как первый
+								</div>
+							</div>
+							<div class="block-body"></div>
+						</div>
+					</div>
+				</section>
 				<section class="block" id="reviews">
 					<div class="block__container">
 						<div class="block__content">
 							<div class="block-head" data-fls-blocktitle="">
-								<h1 class="block-head__title">
+								<h2 class="block-head__title">
 									Отзывы отзывами, но мы покажем вам эмоциональные моменты, которые откликнутся в вас по-своему
-								</h1>
+								</h2>
 								<div class="block-head__description substrate substrate_orange substrate_">Искрении эмоции людей лучше любых отзывов</div>
 							</div>
 							<div class="block-body">
@@ -796,7 +988,7 @@
 								<div class="block-head__picture block-head__picture_left">
 									<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
 								</div>
-								<h1 class="block-head__title">Развеем сомнения — до первого звонка</h1>
+								<h2 class="block-head__title">Развеем сомнения — до первого звонка</h2>
 								<div class="block-head__description substrate substrate_purple substrate_left">Вопросы, которые вы всё равно бы задали. Только мы уже ответили</div>
 							</div>
 							<div class="block-body">
@@ -805,7 +997,7 @@
 										<!-- 1 -->
 										<div class="doubts__block">
 											<div class="doubts-item">
-												<div class="doubts-item__title">Можно ли заказать только квест, без банкета?</div>
+												<h3 class="doubts-item__title">Можно ли заказать только квест, без банкета?</h3>
 												<div class="doubts-hidden">
 													<div class="doubts-hidden__description">
 														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
@@ -822,7 +1014,7 @@
 												</div>
 											</div>
 											<div class="doubts-item">
-												<div class="doubts-item__title">Что входит в “праздник под ключ”?</div>
+												<h3 class="doubts-item__title">Что входит в “праздник под ключ”?</h3>
 												<div class="doubts-hidden">
 													<div class="doubts-hidden__description">
 														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
@@ -852,7 +1044,7 @@
 												</svg>
 											</div>
 											<div class="doubts-item">
-												<div class="doubts-item__title">Какие сценарии подойдут для 30-летия взрослого?</div>
+												<h3 class="doubts-item__title">Какие сценарии подойдут для 30-летия взрослого?</h3>
 												<div class="doubts-hidden">
 													<div class="doubts-hidden__description">
 														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
@@ -869,7 +1061,7 @@
 												</div>
 											</div>
 											<div class="doubts-item">
-												<div class="doubts-item__title">Что вы предлагаете для корпоративов на 100+ человек?</div>
+												<h3 class="doubts-item__title">Что вы предлагаете для корпоративов на 100+ человек?</h3>
 												<div class="doubts-hidden">
 													<div class="doubts-hidden__description">
 														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
@@ -889,7 +1081,7 @@
 										<!-- 3 -->
 										<div class="doubts__block">
 											<div class="doubts-item">
-												<div class="doubts-item__title">Как рассчитывается стоимость?</div>
+												<h3 class="doubts-item__title">Как рассчитывается стоимость?</h3>
 												<div class="doubts-hidden">
 													<div class="doubts-hidden__description">
 														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
@@ -906,7 +1098,7 @@
 												</div>
 											</div>
 											<div class="doubts-item">
-												<div class="doubts-item__title">Мы живём за МКАД — выезд возможен?</div>
+												<h3 class="doubts-item__title">Мы живём за МКАД — выезд возможен?</h3>
 												<div class="doubts-hidden">
 													<div class="doubts-hidden__description">
 														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
@@ -940,7 +1132,7 @@
 					<div class="block__container">
 						<div class="block__content">
 							<div class="block-head" data-fls-blocktitle="">
-								<h1 class="block-head__title">Сценарий, цена и идеи под вас — через 15 минут на WhatsApp</h1>
+								<h2 class="block-head__title">Сценарий, цена и идеи под вас — через 15 минут на WhatsApp</h2>
 								<div class="block-head__description substrate substrate_blue substrate_">Давайте начнем разговор, который станет началом истории</div>
 							</div>
 							<div class="block-body">
@@ -1032,7 +1224,7 @@
 							</nav>
 							<div class="decor">
 								<svg class="decor__svg">
-									<use xlink:href="./assets/img/spritemap.svg__#sprite-firework"></use>
+									<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
 								</svg>
 							</div>
 						</div>
