--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750424565893"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750424565893">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750425376508"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750425376508">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -34,7 +34,7 @@
 							</div>
 						</div>
 						<div class="header__menu menu">
-							<button type="button" data-fls-menu="" class="menu__icon icon-menu">
+							<button aria-label="menu button" type="button" data-fls-menu="" class="menu__icon icon-menu">
 								<span></span>
 							</button>
 							<nav class="menu__body">
@@ -1189,7 +1189,7 @@
 						</div>
 						<div class="address__map">
 							<!-- Вставьте сюда iframe Яндекс.Карты или div для карты -->
-							<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A4e2e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1&amp;source=constructor" width="100%" frameborder="0" loading="lazy" allowfullscreen></iframe>
+							<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A4e2e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1&amp;source=constructor" width="100%" frameborder="0" loading="lazy" allowfullscreen title="address map"></iframe>
 						</div>
 					</div>
 				</section>
