--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750425376508"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750425376508">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750688136036"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750688136036">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -694,7 +694,127 @@
 									Живые фото, видео и эмоции наших героев, в которых легко представить свой праздник
 								</div>
 							</div>
-							<div class="block-body"></div>
+							<div class="block-body">
+								<div class="example" data-fls-example="">
+									<div class="example__content">
+										<div class="example-slider__wrap">
+											<div class="example-slider__button">
+												<button class="example-slider__button-prev">
+													<svg>
+														<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
+													</svg>
+												</button>
+												<button class="example-slider__button-next">
+													<svg>
+														<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
+													</svg>
+												</button>
+											</div>
+											<div class="example-slider__mask">
+												<div class="decor">
+													<svg class="decor__svg">
+														<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+													</svg>
+												</div>
+												<div class="example-slider__phone">
+													<picture>
+														<img alt="Image" src="./assets/img/example/phone.webp">
+													</picture>
+												</div>
+												<div data-fls-slider="" class="swiper example-slider" id="slider-example">
+													<div class="swiper-wrapper example-slider__wrapper">
+														<div class="swiper-slide example-slider__slide">
+															<div class="example-slider__item">
+																<div class="example-slider__text">
+																	<picture>
+																		<img alt="Image" src="./assets/img/example/image2.webp">
+																	</picture>
+																	<span>dkjiol</span>
+																</div>
+																<div class="example-slider__smiles">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																</div>
+															</div>
+															<picture>
+																<img loading="lazy" class="example-slider__img" alt="img" src="./assets/img/example/image1.webp">
+															</picture>
+														</div>
+														<div class="swiper-slide example-slider__slide">
+															<div class="example-slider__item">
+																<div class="example-slider__text">
+																	<picture>
+																		<img alt="Image" src="./assets/img/example/image2.webp">
+																	</picture>
+																	<span>dkjiol</span>
+																</div>
+																<div class="example-slider__smiles">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																</div>
+															</div>
+															<picture>
+																<img loading="lazy" class="example-slider__img" alt="img" src="./assets/img/example/image1.webp">
+															</picture>
+														</div>
+														<div class="swiper-slide example-slider__slide">
+															<div class="example-slider__item">
+																<div class="example-slider__text">
+																	<picture>
+																		<img alt="Image" src="./assets/img/example/image2.webp">
+																	</picture>
+																	<span>dkjiol</span>
+																</div>
+																<div class="example-slider__smiles">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																	<img src="./assets/img/smiles/fire.svg" alt="Image">
+																</div>
+															</div>
+															<picture>
+																<img loading="lazy" class="example-slider__img" alt="img" src="./assets/img/example/image1.webp">
+															</picture>
+														</div>
+													</div>
+													<div class="swiper-pagination slider-example__pagination"></div>
+												</div>
+											</div>
+										</div>
+										<div class="example__description">
+											<p class="substrate substrate_purple">
+												Ведущий — не аниматор, а харизма на максималках
+												<span class="block-body__smile">
+													<picture>
+														<img alt="smile" src="./assets/img/smiles/star2.webp">
+													</picture>
+												</span>
+											</p>
+											<p class="substrate substrate_purple">
+												Это было как фильм, в котором ты сам — главный герой. Только без дублей. И со своим бокалом.
+												<span class="block-body__smile">
+													<picture>
+														<img alt="smile" src="./assets/img/smiles/heart.webp">
+													</picture>
+												</span>
+											</p>
+											<p class="substrate substrate_purple">
+												Без конкурсов. Без клоунады. Только стиль и ставки
+												<span class="block-body__smile">
+													<picture>
+														<img alt="smile" src="./assets/img/smiles/check.webp">
+													</picture>
+												</span>
+											</p>
+										</div>
+									</div>
+									<button class="button button_blue" data-fls-custombutton="">
+										<span></span>
+										Хочу такой же праздник!
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
@@ -856,7 +976,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="block" id="command">
+				<section class="block" id="team">
 					<div class="block__container">
 						<div class="block__content">
 							<div class="block-head" data-fls-blocktitle="">
@@ -868,7 +988,77 @@
 									Мы не просто делаем праздники. Мы делаем то самое чувство, когда «всё пошло по плану, но неожиданно круче». У вас один праздник — у нас сотни, но каждый — как первый
 								</div>
 							</div>
-							<div class="block-body"></div>
+							<div class="block-body">
+								<div class="team" data-fls-team="">
+									<div class="decor">
+										<svg class="decor__svg">
+											<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+										</svg>
+									</div>
+									<div data-fls-slider="" class="swiper team-slider" id="slider-team">
+										<div class="swiper-wrapper team-slider__wrapper">
+											<div class="swiper-slide team-slider__slide">
+												<div class="team-slider__picture">
+													<picture>
+														<img alt="Image" src="./assets/img/team/image1.webp">
+													</picture>
+													<p class="substrate substrate_blue">Ведущий</p>
+												</div>
+												<div class="team-slider__name">Александр</div>
+												<p class="team-slider__text">Слова — меткие. Паузы — режиссёрские. Он в зале, как рыба в шампанском.</p>
+											</div>
+											<div class="swiper-slide team-slider__slide">
+												<div class="team-slider__picture">
+													<picture>
+														<img alt="Image" src="./assets/img/team/image2.webp">
+													</picture>
+													<p class="substrate substrate_orange">Помощник ведущего</p>
+												</div>
+												<div class="team-slider__name">Алина</div>
+												<p class="team-slider__text">
+													Она не спрашивает, где звук. Она уже его включила. Она не ищет реквизит. Она его держит.
+												</p>
+											</div>
+											<div class="swiper-slide team-slider__slide">
+												<div class="team-slider__picture">
+													<picture>
+														<img alt="Image" src="./assets/img/team/image3.webp">
+													</picture>
+													<p class="substrate substrate_blue">Ведущий</p>
+												</div>
+												<div class="team-slider__name">Катя</div>
+												<p class="team-slider__text">Она врывается в праздник, как будто сценарий уже написан — и написан про неё.</p>
+											</div>
+											<div class="swiper-slide team-slider__slide">
+												<div class="team-slider__picture">
+													<picture>
+														<img alt="Image" src="./assets/img/team/image4.webp">
+													</picture>
+													<p class="substrate substrate_orange">Помощник ведущего</p>
+												</div>
+												<div class="team-slider__name">Валерия</div>
+												<p class="team-slider__text">
+													На площадке хаос? Только не там, где она. Пока все паникуют — она уже придумала запасной план.
+												</p>
+											</div>
+											<div class="swiper-slide team-slider__slide">
+												<div class="team-slider__picture">
+													<picture>
+														<img alt="Image" src="./assets/img/team/image1.webp">
+													</picture>
+													<p class="substrate substrate_blue">Ведущий</p>
+												</div>
+												<div class="team-slider__name">Александр</div>
+												<p class="team-slider__text">Слова — меткие. Паузы — режиссёрские. Он в зале, как рыба в шампанском.</p>
+											</div>
+										</div>
+									</div>
+									<button class="button button_purple" data-fls-custombutton="">
+										<span></span>
+										Хочу их на своем празднике
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
