--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750688136036"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750688136036">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750688441928"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750688441928">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -1379,7 +1379,7 @@
 						</div>
 						<div class="address__map">
 							<!-- Вставьте сюда iframe Яндекс.Карты или div для карты -->
-							<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A4e2e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1&amp;source=constructor" width="100%" frameborder="0" loading="lazy" allowfullscreen title="address map"></iframe>
+							<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A4e2e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1&amp;source=constructor" loading="lazy" allowfullscreen title="address map"></iframe>
 						</div>
 					</div>
 				</section>
