--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="preload" href="./assets/fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-		<link rel="preload" href="./assets/fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-		<link rel="preload" href="./assets/fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-		<link rel="preload" href="./assets/fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+		<link rel="preload" href="./assets/fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2">
+		<link rel="preload" href="./assets/fonts/Montserrat-Regular.woff2" as="font" type="font/woff2">
+		<link rel="preload" href="./assets/fonts/Montserrat-Medium.woff2" as="font" type="font/woff2">
+		<link rel="preload" href="./assets/fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2">
+		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2">
 		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
@@ -16,8 +16,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750688441928"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750688441928">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750695456425"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750695456425">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -159,12 +159,6 @@
 								</ul>
 							</nav>
 						</div>
-						<!--
-<fetch url="@components/layout/menu/menu.json">
-<each loop='item in response'>
-</each>
-</fetch>
--->
 						<div class="dropdown" id="city" data-fls-dropdown="">
 							<div class="dropdown-toggle">
 								<span id="selectedOption" class="dropdown-toggle__text">Москва</span>
